# Algorithms-Abstract-Data-Structures-C-

./: description.txt
1 Getting Started/hw1-wesmuehlhausen-master/hw1-wesmuehlhausen-master/: CMakeLists.txt  array_list.h  hw1_perf.cpp  hw1_test.cpp  linked_list.h  list.h  plot_script.gp
2 Inefficient Sorting/hw2-wesmuehlhausen-master/hw2-wesmuehlhausen-master/: CMakeLists.txt  array_list.h  hw2_perf.cpp  hw2_test.cpp  linked_list.h  list.h  plot_script.gp
3 Efficient Sorting/hw3-wesmuehlhausen-master/hw3-wesmuehlhausen-master/: CMakeLists.txt  hw3_perf.cpp  hw3_test.cpp  linked_list.h  list.h  plot_script.gp
4 KV Pairs/hw4-wesmuehlhausen-main/hw4-wesmuehlhausen-main/: CMakeLists.txt  collection.h  hw4_perf.cpp  hw4_test.cpp  linked_list.h  linked_list_collection.h  plot_script.gp
5 Binary Search/hw5-wesmuehlhausen-main/hw5-wesmuehlhausen-main/: .gitignore  CMakeLists.txt  array_list_collection.h  bin_search_collection.h  hw5_perf.cpp  hw5_test.cpp  list.h  plot_script.gp
6 Hash Table/hw6-wesmuehlhausen-main/hw6-wesmuehlhausen-main/: CMakeLists.txt  array_list.h  bin_search_collection.h  hash_table_collection.h  hw6_perf.cpp  hw6_test.cpp  plot_script.gp  plot_stats.gp
6 Hash Table/hw6-wesmuehlhausen-main/hw6-wesmuehlhausen-main/Graphs/Old Versions/: array_list.h
7 Binary Search Trees/hw7-wesmuehlhausen-main/: CMakeLists.txt  hw7_perf.cpp  hw7_test.cpp  plot_script.gp  plot_stats.gp
7 Binary Search Trees/hw7-wesmuehlhausen-main/Graphs/Backups/: array_list.h  array_list_collection.h  bin_search_collection.h  bst_collection.h
8 AVL Trees/hw8-wesmuehlhausen-main/: CMakeLists.txt  array_list_collection.h  bst_collection.h  hw8_perf.cpp  hw8_test.cpp  list.h  plot_script.gp  plot_stats.gp
8 AVL Trees/hw8-wesmuehlhausen-main/Graphs/Backups/: array_list.h  array_list_collection.h  bin_search_collection.h  bst_collection.h  hash_table_collection.h
9 Red Black Trees/hw9-wesmuehlhausen-main/: CMakeLists.txt  avl_collection.h  collection.h  hw9_perf.cpp  hw9_test.cpp  new 1.h  plot_script.gp  plot_stats.gp  rbt_collection.h
